--- a/scout_base/CMakeLists.txt
+++ b/scout_base/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
   scout_msgs
   sensor_msgs
   serial
+  tf
+  tf2_ros
 )
 
 find_package(Boost REQUIRED COMPONENTS system)
@@ -23,7 +25,7 @@ find_package(Boost REQUIRED COMPONENTS system)
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES scout_base
-  CATKIN_DEPENDS controller_manager hardware_interface roscpp rospy scout_msgs sensor_msgs serial
+  CATKIN_DEPENDS controller_manager hardware_interface roscpp rospy scout_msgs sensor_msgs serial tf tf2_ros
 #  DEPENDS system_lib
   DEPENDS Boost
 )
@@ -44,5 +46,18 @@ add_dependencies(${PROJECT_NAME}_node
   ${catkin_EXPORTED_TARGETS}
 )
 target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+)
+
+add_executable(${PROJECT_NAME}_node_without_control 
+  src/scout_base_without_control.cpp
+  src/ScoutDriver.cpp
+  src/QThread.cpp
+)
+add_dependencies(${PROJECT_NAME}_node_without_control 
+  ${${PROJECT_NAME}_EXPORTED_TARGETS} 
+  ${catkin_EXPORTED_TARGETS}
+)
+target_link_libraries(${PROJECT_NAME}_node_without_control
   ${catkin_LIBRARIES}
 )
