--- a/scout_base/package.xml
+++ b/scout_base/package.xml
@@ -20,6 +20,8 @@
   <build_depend>scout_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>serial</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>hardware_interface</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -27,6 +29,8 @@
   <build_export_depend>scout_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>serial</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
+  <build_export_depend>tf2_ros</build_export_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>hardware_interface</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -34,6 +38,8 @@
   <exec_depend>scout_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>serial</exec_depend>
+  <exec_depend>tf</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
