--- a/scout_control/config/control.yaml
+++ b/scout_control/config/control.yaml
@@ -15,13 +15,13 @@ scout_velocity_controller:
   base_frame_id: base_footprint
 
   # publish a TF based on encoders
-  enable_odom_tf: true
+  enable_odom_tf: false
 
   # hardware provides wheel velocities
   estimate_velocity_from_position: false
 
   # Wheel separation and radius
-  wheel_radius    :             0.32918
+  wheel_radius    :             0.16459
   wheel_separation:             0.498 
 
   # Wheel separation and radius multipliers
@@ -33,12 +33,24 @@ scout_velocity_controller:
   linear:
     x:
       has_velocity_limits    :  true
-      max_velocity           :  1.5   # m/s
+      max_velocity           :  0.5   # m/s
       has_acceleration_limits:  true
-      max_acceleration       :  1.5   # m/s^2
+      max_acceleration       :  1.0   # m/s^2
   angular:
     z:
       has_velocity_limits    :  true
-      max_velocity           :  2.0   # rad/s
+      max_velocity           :  0.5235   # rad/s
       has_acceleration_limits:  true
-      max_acceleration       :  3.0   # rad/s^2
+      max_acceleration       :  1.5   # rad/s^2
+  # linear:
+  #   x:
+  #     has_velocity_limits    :  true
+  #     max_velocity           :  1.5   # m/s
+  #     has_acceleration_limits:  true
+  #     max_acceleration       :  0.5235   # m/s^2
+  # angular:
+  #   z:
+  #     has_velocity_limits    :  true
+  #     max_velocity           :  2.0   # rad/s
+  #     has_acceleration_limits:  true
+  #     max_acceleration       :  1.5   # rad/s^2
