--- a/scout_control/config/control.yaml
+++ b/scout_control/config/control.yaml
@@ -18,14 +18,14 @@ scout_velocity_controller:
   enable_odom_tf: false
 
   # hardware provides wheel velocities
-  estimate_velocity_from_position: false
+  estimate_velocity_from_position: true
 
   # Wheel separation and radius
   wheel_radius    :             0.16459
   wheel_separation:             0.498 
 
   # Wheel separation and radius multipliers
-  wheel_separation_multiplier:  1.0 # default: 1.0
+  wheel_separation_multiplier:  2.0 # default: 1.0
   wheel_radius_multiplier    :  1.0 # default: 1.0
 
   # Velocity and acceleration limits
@@ -33,7 +33,7 @@ scout_velocity_controller:
   linear:
     x:
       has_velocity_limits    :  true
-      max_velocity           :  0.5   # m/s
+      max_velocity           :  1.5   # m/s
       has_acceleration_limits:  true
       max_acceleration       :  1.0   # m/s^2
   angular:
