--- a/scout_navigation/config/move_base_config/costmap_common_params.yaml
+++ b/scout_navigation/config/move_base_config/costmap_common_params.yaml
@@ -1,16 +1,28 @@
 footprint: [[0.55, 0.4], [-0.55, 0.4], [-0.55, -0.4], [0.55, -0.4]]
 #robot_radius: 0.5            # 机器人半径
-footprint_padding: 0.05       # footprint膨胀系数
-
-obstacle_range: 10.0          # 障碍物探测距离
-raytrace_range: 6.0           # 除指定范围外的空间
-
+footprint_padding: 0.02       # footprint膨胀系数
 resolution: 0.05              # 地图分辨率
 
-inflation_radius: 1.0         # 膨胀半径
 #max_obstacle_height: 0.6     # 最大障碍物高度
-#min_obstacle_height: 0.0     # 最小障碍物高度
+#min_obstacle_height: 0.0     # 最小障碍物高度 
 
-observation_sources: laser    # 观察源 laser或point_cloud_sensor:
-laser: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true}  # 观察源的数据类型
+#observation_sources: laser    # 观察源 laser或point_cloud_sensor:
+#laser: {sensor_frame: os_sensor, data_type: LaserScan, topic: /scan, marking: true, clearing: true}  # 观察源的数据类型
 #point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
+
+
+#layer definitions
+static_layer:
+    map_topic: map
+    subscribe_to_updates: true
+
+obstacle_layer:
+    observation_sources: laser
+    laser: {sensor_frame: os_sensor, data_type: LaserScan, topic: /scan, marking: true, clearing: true}  # 观察源的数据类型
+
+# obstacle_range: 4.0
+# raytrace_range: 5.0
+
+inflation_layer:
+    inflation_radius: 1.0
+    cost_scaling_factor: 5 
