--- a/scout_base/package.xml
+++ b/scout_base/package.xml
@@ -22,6 +22,7 @@
   <build_depend>serial</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf2_ros</build_depend>
+  <build_depend>can_msgs</build_depend>
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>hardware_interface</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -31,6 +32,7 @@
   <build_export_depend>serial</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
+  <build_export_depend>can_msgs</build_export_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>hardware_interface</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -40,7 +42,7 @@
   <exec_depend>serial</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
-
+  <exec_depend>can_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
